--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>my-project</title>
+    <title>PaperTime论文检测系统-在线改重已经上线</title>
   </head>
   <body>
     <div id="app"></div>
